--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
   "cSpell.words": [
+    "Действие",
     "Добавить",
     "название",
+    "Направление",
     "Полное",
     "Сохранить",
-    "Специальность",
+    "Направление",
     "Шифр"
   ]
 }
