--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,16 @@
 {
   "cSpell.words": [
+    "данных",
     "Действие",
     "Добавить",
+    "Короткое",
     "название",
+    "наименование",
     "Направление",
+    "Организация",
     "Полное",
     "Сохранить",
-    "Направление",
+    "Факультет",
     "Шифр"
   ]
 }
